# rocket

./: .gitignore  CMakeLists.txt  HOWTOBUILD.README  Makefile  cdiameter.cpp  cdiameter.h  rocketCalc.cpp
rocketCalc/: #coolant.cpp#  CMakeLists.txt  cdiameter.cpp  chamber.cpp  chamber.h  coolant.cpp  coolant.cpp~  coolant.h  coolant.h~  exit.cpp  exit.h  helpers.cpp  helpers.h  injector.cpp  injector.cpp~  injector.h  injector.h~  lol  parameters.cpp  parameters.cpp~  parameters.h  propellentFlow.cpp  propellentFlow.cpp~  propellentFlow.h  rocketCalc.cpp  thrust.cpp  thrust.cpp~  thrust.h
rocketCalc/symboliccpp/: init.cpp
